# ai-sdlc

./: .active-task  .gitignore  .prettierignore  .release-please-manifest.json  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  VISION.md  codecov.yml  enterprise.example.yaml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json
.ai-sdlc/: adapter-binding.yaml  agent-role-triage.yaml  agent-role.yaml  autonomy-policy.yaml  dor-config.yaml  orchestrator-failure-patterns.yaml  pipeline.yaml  quality-gate.yaml  review-policy.md  transcript-leaves.jsonl  trusted-reviewers.yaml  untrusted-pr.openshell.yaml
.changeset/: README.md  config.json  fix-bugs-0-1-2.md
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.husky/: pre-commit  pre-push
ai-sdlc-plugin/: CHANGELOG.md  README.md  plugin.json
contrib/: builder-manifest.yaml
dashboard/: next.config.mjs  package.json  vitest.config.ts
docs/: README.md  prd-claude-code-native-integration.md  troubleshooting.md
dogfood/: package.json  vitest.config.ts
sdk-python/: pyproject.toml
sdk-python/src/ai_sdlc/adapters/: event_bus.py  github.py  linear.py  resolve_secret.py
sdk-python/src/ai_sdlc/adapters/stubs/: __init__.py  bitbucket.py  code_analysis.py  deployment_target.py  gitlab.py  jira.py  messenger.py  semgrep.py  sonarqube.py
sdk-python/src/ai_sdlc/agents/: __init__.py  runner.py  runner_registry.py
sdk-python/src/ai_sdlc/core/: validation.py
sdk-python/src/ai_sdlc/metrics/: instrumentation.py
sdk-python/src/ai_sdlc/policy/: __init__.py  evaluator.py
sdk-python/src/ai_sdlc/security/: docker_sandbox.py  env_secret_store.py  github_jit.py  github_sandbox.py
sdk-python/tests/adapters/: test_event_bus.py  test_github_adapter.py  test_linear_adapter.py  test_resolve_secret.py  test_stubs.py
sdk-python/tests/agents/: test_runner.py  test_runner_registry.py
sdk-python/tests/metrics/: test_instrumentation.py
sdk-python/tests/policy/: test_evaluator.py
sdk-python/tests/security/: test_docker_sandbox.py  test_env_secret_store.py  test_github_jit.py  test_github_sandbox.py
sidecar-depparse/: Dockerfile  README.md  pyproject.toml
sidecar-depparse/src/sidecar_depparse/: __init__.py  app.py  detector.py  schemas.py
sidecar-depparse/tests/: test_app.py  test_detector.py
(+1809 files in other folders)
